fix: CU-8688ucrbp adding missing dep.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "publish:cocoapod": "pod trunk push ./CapacitorPushNotifications.podspec --allow-warnings"
   },
   "devDependencies": {
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/gitlab": "^13.0.2",
+    "@semantic-release/npm": "^12.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
@@ -60,6 +63,7 @@
     "prettier-plugin-java": "~1.0.2",
     "rimraf": "^3.0.0",
     "rollup": "^2.29.0",
+    "semantic-release": "^24.0.0",
     "swiftlint": "^1.0.1",
     "typescript": "~4.1.5"
   },
