--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
   },
   "devDependencies": {
     "@semantic-release/git": "^10.0.0",
-    "@semantic-release/gitlab": "^13.0.2",
+    "@semantic-release/github": "^10.0.6",
     "@semantic-release/npm": "^12.0.0",
+    "@semantic-release/commit-analyzer": "^13.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
